[gd_scene load_steps=14 format=3 uid="uid://cowngojs4q8sh"]

[ext_resource type="Script" uid="uid://drdacs4lsq4bq" path="res://Unused/REAL_QUIZ.gd" id="1_vjqhs"]
[ext_resource type="Texture2D" uid="uid://dyrjnge1rlscx" path="res://Assets/image.png" id="2_cpgde"]
[ext_resource type="FontFile" uid="uid://k6fx05vf40o8" path="res://Assets/Font/PressStart2P.ttf" id="3_mmjuh"]
[ext_resource type="Script" uid="uid://brwh3gbjogoge" path="res://Unused/v_box_container.gd" id="4_1256r"]
[ext_resource type="Theme" uid="uid://6shp5ck1tnja" path="res://Assets/UI/kenneyUI.tres" id="5_1gw2o"]
[ext_resource type="AudioStream" uid="uid://dp0l1h0d71ss2" path="res://Assets/sounds/computer-humming-236384.mp3" id="6_tsvcg"]
[ext_resource type="AudioStream" uid="uid://dh5xj503wevkx" path="res://Assets/sounds/sounds/correct-choice-43861.mp3" id="7_vnlvy"]
[ext_resource type="AudioStream" uid="uid://bdr4gwovt7nol" path="res://Assets/sounds/sounds/incorrect-buzzer-374194.mp3" id="8_ivn6w"]
[ext_resource type="AudioStream" uid="uid://bejcvst70nvoy" path="res://Assets/sounds/sounds/Click.mp3" id="9_4yd13"]
[ext_resource type="AudioStream" uid="uid://bk2de5in8agjc" path="res://Assets/sounds/sounds/opening-door-411632.mp3" id="10_cpgde"]
[ext_resource type="AudioStream" uid="uid://bqbrrsqidc2m" path="res://Assets/sounds/spacebar-click-keyboard-199448.mp3" id="11_1256r"]
[ext_resource type="Script" uid="uid://bktawl7w5tldb" path="res://Scenes/password_screen.gd" id="11_mmjuh"]
[ext_resource type="PackedScene" uid="uid://c4la7kcg2s8dq" path="res://Objects/caretaker.tscn" id="13_1gw2o"]

[node name="Quiz" type="CanvasLayer" node_paths=PackedStringArray("sfx_doorUnlocked")]
script = ExtResource("1_vjqhs")
sfx_doorUnlocked = NodePath("SFX_DoorUnlocked")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 63.0
offset_right = -64.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_cpgde")
expand_mode = 3

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 104.0
offset_top = 104.0
offset_right = 360.0
offset_bottom = 127.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_mmjuh")
theme_override_font_sizes/font_size = 20
text = "Score: "

[node name="ScoreLabel2" type="Label" parent="."]
offset_left = 104.0
offset_top = 104.0
offset_right = 384.0
offset_bottom = 127.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_mmjuh")
theme_override_font_sizes/font_size = 20
text = "/100"
horizontal_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -228.0
offset_right = 120.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("4_1256r")

[node name="QuestionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_mmjuh")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="AnswerInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_1gw2o")

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_1gw2o")
columns = 3

[node name="1" type="Button" parent="VBoxContainer/GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1"

[node name="2" type="Button" parent="VBoxContainer/GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2"

[node name="3" type="Button" parent="VBoxContainer/GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3"

[node name="4" type="Button" parent="VBoxContainer/GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4"

[node name="5" type="Button" parent="VBoxContainer/GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "5"

[node name="6" type="Button" parent="VBoxContainer/GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "6"

[node name="7" type="Button" parent="VBoxContainer/GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "7"

[node name="8" type="Button" parent="VBoxContainer/GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "8"

[node name="9" type="Button" parent="VBoxContainer/GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "9"

[node name="C" type="Button" parent="VBoxContainer/GridContainer"]
visible = false
layout_mode = 2
text = "C"

[node name="0" type="Button" parent="VBoxContainer/GridContainer"]
visible = false
layout_mode = 2
text = "0"

[node name="Backspace" type="Button" parent="VBoxContainer/GridContainer"]
visible = false
layout_mode = 2
text = "back"

[node name="SubmitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_1gw2o")
text = "Next"
icon_alignment = 1
vertical_icon_alignment = 2

[node name="FeedbackLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 2

[node name="SFX_Hum" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_tsvcg")
volume_db = 6.0
parameters/looping = true

[node name="SFX_Correct" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_vnlvy")

[node name="SFX_Wrong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_ivn6w")
volume_db = 6.0

[node name="SFX_Click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_4yd13")

[node name="SFX_DoorUnlocked" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_cpgde")

[node name="SFX_Keyboard" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_1256r")

[node name="PasswordScreen" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 63.0
offset_right = -64.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.28235295, 1, 1)
script = ExtResource("11_mmjuh")
caretaker_scene = ExtResource("13_1gw2o")
spawn_point_name = "CaretakerSpawnPoint"

[node name="Label" type="Label" parent="PasswordScreen"]
layout_mode = 0
offset_left = 128.0
offset_top = 184.0
offset_right = 895.0
offset_bottom = 264.0
theme_override_fonts/font = ExtResource("3_mmjuh")
theme_override_font_sizes/font_size = 23
text = "POWER DOWN
EMERGENCY LOCK: PASSWORD REQUIRED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PasswordEntry" type="LineEdit" parent="PasswordScreen"]
layout_mode = 0
offset_left = 368.0
offset_top = 328.0
offset_right = 656.0
offset_bottom = 365.43433
theme = ExtResource("5_1gw2o")

[node name="SubmitButton" type="Button" parent="PasswordScreen"]
layout_mode = 0
offset_left = 448.0
offset_top = 392.0
offset_right = 576.0
offset_bottom = 432.251
theme = ExtResource("5_1gw2o")
text = "Enter"

[node name="IncorrectLabel" type="Label" parent="PasswordScreen"]
layout_mode = 0
offset_left = 368.0
offset_top = 80.0
offset_right = 656.0
offset_bottom = 103.0
theme_override_fonts/font = ExtResource("3_mmjuh")
text = "Password incorrect"
